--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "dev:babel": "babel ./src -x \".ts\" --out-dir ./ --watch",
     "dev:ts": "tsc --noEmit --allowJs --watch",
     "lint": "npm-run-all lint:*",
-    "lint:js": "eslint src --ext .ts,.tsx --cache",
-    "lint:ts": "tslint src/**/*.ts -c tslint.json -p tsconfig.json -t verbose",
+    "lint:eslint": "eslint src --ext .ts,.tsx --cache",
+    "lint:tslint": "tslint src/**/*.ts -c tslint.json -p tsconfig.json -t verbose",
     "precommit": "lint-staged",
     "prepublishOnly": "npm-run-all -s validate build",
     "prettify": "prettier --write \"src/**/*.{js,ts,json}\"",
