--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.4",
-    "debounce": "^1.2.0"
+    "throttle-debounce": "^2.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -65,9 +65,9 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.4",
-    "@types/debounce": "^1.2.0",
     "@types/jest": "^24.0.13",
     "@types/react": "^16.8.17",
+    "@types/throttle-debounce": "^1.1.1",
     "@typescript-eslint/parser": "^1.9.0",
     "coveralls": "^3.0.3",
     "cross-env": "^5.2.0",
