Add defineSizeRanges utility

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "lint-staged": "^8.1.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1",
+    "react": "^16.8.6",
     "shx": "^0.3.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
@@ -86,9 +87,11 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
     "tslint-react-hooks": "^2.1.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "react": ">=16.8.0"
+  },
   "pre-push": [
     "validate"
   ]
